--- a/package.json
+++ b/package.json
@@ -1,41 +1,48 @@
 {
-    "name": "frontend",
-    "proxy": "http://127.0.0.1:5000",
-    "version": "0.1.0",
-    "private": true,
+    "name": "amazona",
+    "version": "1.0.0",
+    "description": "Demo : https://amazonaapp.herokuapp.com/",
+    "main": "index.js",
     "dependencies": {
-        "@testing-library/jest-dom": "^4.2.4",
-        "@testing-library/react": "^9.3.2",
-        "@testing-library/user-event": "^7.1.2",
-        "axios": "^0.19.2",
-        "js-cookie": "^2.2.1",
-        "react": "^16.12.0",
-        "react-dom": "^16.12.0",
-        "react-redux": "^7.1.3",
-        "react-router-dom": "^5.1.2",
-        "react-scripts": "^3.4.1",
-        "redux": "^4.0.5",
-        "redux-thunk": "^2.3.0"
+        "aws-sdk": "^2.702.0",
+        "body-parser": "^1.19.0",
+        "dotenv": "^8.2.0",
+        "eslint-plugin-react": "^7.19.0",
+        "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^5.8.11",
+        "multer": "^1.4.2",
+        "multer-s3": "^2.9.0"
+    },
+    "devDependencies": {
+        "@babel/cli": "^7.8.4",
+        "@babel/core": "^7.8.4",
+        "@babel/node": "^7.8.4",
+        "@babel/preset-env": "^7.8.4",
+        "eslint": "^6.8.0",
+        "eslint-config-airbnb": "^18.1.0",
+        "eslint-plugin-import": "^2.20.1",
+        "eslint-plugin-jsx-a11y": "^6.2.3",
+        "eslint-plugin-react-hooks": "^2.5.1",
+        "nodemon": "^2.0.2"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "start": "nodemon --watch backend --exec babel-node backend/server.js",
+        "build": "rm -rf dist && babel backend -d dist  && cd frontend && npm install && npm run build",
+        "heroku-postbuild-x": "npm run build && cd frontend && npm install && npm run build"
     },
-    "eslintConfig": {
-        "extends": "react-app"
+    "repository": {
+        "type": "git",
+        "url": ""
     },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": ""
+    },
+    "homepage": "",
+    "engines": {
+        "node": "12.4.0",
+        "npm": "6.9.0"
     }
 }
